--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
-@import "./reset";
+// @import "./reset";
+@import "reset";
+@import "font-awesome";
 @import "modules/header";
 @import "modules/footer";
 @import "modules/comments";
