0910_ルーティング各種設定

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,4 @@
-// @import "./reset";
-@import "reset";
+@import "./reset";
 @import "font-awesome";
 @import "modules/header";
 @import "modules/footer";
