--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -43,17 +43,6 @@
 .login-form-inner {
   padding: 32px 64px;
   border-top: 1px solid #eee;
-  .btn-default {
-    display: block;
-    width: 100%;
-    line-height: 48px;
-    font-size: 14px;
-    border: 1px solid transparent;
-    -webkit-transition: all ease-out .3s;
-    transition: all ease-out .3s;
-    cursor: pointer;
-    text-align: center;
-  }
   .btn-sns-facebook {
     margin: 16px 0 0;
     background: #385185;
@@ -73,11 +62,6 @@
     height: 40px;
     width: 100%;
     margin-top: 30px;
-  }
-  .btn-red {
-    background: #ea352d;
-    border: 1px solid #ea352d;
-    color: #fff;
   }
   .login-submit {
     margin: 24px 0 0;
@@ -99,3 +83,91 @@
   }
 }
 
+.l-single-container {
+  background-color: white;
+  width: 700px;
+  margin: 0 auto;
+  .l-single-content {
+    max-width: 343px;
+    margin: 0 auto;
+    padding: 40px 40px 64px;
+    p {
+      margin: 8px 0 0;
+      line-height: 1.5;
+    } 
+  }
+  .l-single-head {
+    font-size: 22px;
+    padding: 32px;
+    text-align: center;
+    font-weight: bold;
+    border-bottom: 1px solid #f5f5f5;
+  }
+  .l-single-inner {
+    width: 100%;
+    .field {
+      margin-top: 32px;
+      h3 {
+        font-size: 16px;
+        font-weight: bold;
+      }
+    }
+    .field label {
+      font-weight: 600;
+    }
+    .field input {
+      width: 100%;
+      margin: 8px 0 0;
+      height: 20px;
+      padding: 10px 16px 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: #fff;
+      line-height: 1.5;
+      font-size: 16px;
+    }
+    .field .l-single-text {
+      margin: 8px 0 0;
+      padding: 0;
+      line-height: 1.5;
+    }
+    .form-require {
+      background: #ea352d;
+      margin: 0 0 0 8px;
+      padding: 2px 4px;
+      border-radius: 2px;
+      color: #fff;
+      font-size: 12px;
+      vertical-align: top;
+    }
+    .form-info-text {
+      color: #888;
+      margin-bottom: 32px;
+    }
+  }
+  .btn-next {
+    margin-top: 32px;
+  }
+}
+
+.btn-red {
+  background: #ea352d;
+  border: 1px solid #ea352d;
+  color: #fff;
+} 
+
+.btn-default {
+  display: block;
+  width: 100%;
+  line-height: 48px;
+  font-size: 14px;
+  border: 1px solid transparent;
+  -webkit-transition: all ease-out .3s;
+  transition: all ease-out .3s;
+  cursor: pointer;
+  text-align: center;
+}
+
+.text-center {
+  text-align: center;
+}
