--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,72 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+%body
+  .single-container
+    %header.single-header
+      %h1
+        %img{:alt => "mercari", :src => "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763"}/
+    %main.single-main
+      %section.l-single-container
+        %h2.l-single-head.registration 会員情報入力
+        .l-single-content
+          = form_for(resource, as: resource_name, url: registration_path(resource_name),:html => {:class => "l-single-inner"}) do |f|
+            = render "devise/shared/error_messages", resource: resource
+            .field
+              = f.label :ニックネーム
+              %spna.form-require 必須
+              %br/
+              = f.text_field :nickname 
+            .field
+              = f.label :メールアドレス
+              %spna.form-require 必須
+              %br/
+              = f.email_field :email, autofocus: true, autocomplete: "email"
+            .field
+              = f.label :パスワード
+              %spna.form-require 必須
+              - if @minimum_password_length
+                %em
+                  (#{@minimum_password_length} characters minimum)
+              %br/
+              = f.password_field :password, autocomplete: "new-password"
+            .field
+              = f.label :パスワード確認
+              %spna.form-require 必須
+              %br/
+              = f.password_field :password_confirmation, autocomplete: "new-password"
+
+            .field
+              %h3 本人確認
+              %p.l-single-text 安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
+            
+            .field
+              = f.label :お名前全角
+              %spna.form-require 必須
+              %br/
+              = f.text_field :name
+
+            .field
+              = f.label :お名前カナ
+              %spna.form-require 必須
+              %br/
+              = f.text_field  :name_kana
+
+            .field
+              = f.label :生年月日
+              %spna.form-require 必須
+              %br/
+              = f.text_field  :birthday
+            %p.form-info-text ※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。
+            %p.l-single-text.text-center「次へ進む」のボタンを押すことにより、利用規約に同意したものとみなします
+
+
+            
+
+            .actions.btn-next
+              = f.submit "次へ進む", :class=>"btn-default btn-red"
+          = render "devise/shared/links"
+
+    %footer.single-footer
+      %nav
+        %ul
+          %li プライベートポリシー
+          %li メルカリ利用規約
+          %li 特定商取引に関する表記
