--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,6 +10,8 @@
   %body
     %header
       = render "/shared/header"
-      = yield
+      = yield 
     %footer
       = render "/shared/footer"
+    %global-footer
+      = render "/shared/sell-btn" 
