--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,8 +1,6 @@
 %body
   .single-container
-    %header.single-header
-      %h1
-        %img{:alt => "mercari", :src => "//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?2482339763"}/
+    = render partial: "shared/sub_header"
     %main.single-main
       %section.l-single-container
         %h2.l-single-head.registration 会員情報入力
@@ -63,10 +61,5 @@
             .actions.btn-next
               = f.submit "次へ進む", :class=>"btn-default btn-red"
           = render "devise/shared/links"
-
-    %footer.single-footer
-      %nav
-        %ul
-          %li プライベートポリシー
-          %li メルカリ利用規約
-          %li 特定商取引に関する表記
+          
+    = render partial: "shared/sub_footer"
