--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -1,4 +1,5 @@
 .main{
+  
   background-color: rgb(245, 245, 245);
   display: flex;
   flex-direction: column;
@@ -8,202 +9,282 @@
 
 
   .top-image{
-    background-color: #253141;
+    left: 50%;
+    margin-left: -50vw;
+    position: relative;
+    top: 0px;
+    width: 100vw;
+    overflow: hidden;
     height: 390px;
-    display: flex;
-    line-height: 100px;
-    align-items: center;
-    padding: 0 20px;
-    font-weight: bold;
+
+    .top-image2{
+      width: 100vw;
+      overflow: hidden;
+      height: 390px;
+      background-image: url(top_image.jpg);
+      background-position: center center;
+      background-size: auto;
+    }
+
   }
 
 
 
 
-.popular{
-  padding: 56px 0px 30px;
-  background-color: rgb(255, 255, 255);
-  left: 50%;
-  margin-left: -50vw;
-  position: relative;
-  top: 0px;
-  width: 100vw;
+  .popular{
+    padding: 56px 0px 30px;
+    background-color: rgb(255, 255, 255);
+    left: 50%;
+    margin-left: -50vw;
+    position: relative;
+    top: 0px;
+    width: 100vw;
 
 
-  .category{
-    margin-bottom: 16px;
-    text-align: center;
-    font-size: 28px;
-    font-weight: 600;
-    line-height: 1.4em;
-    font-family: Arial,游ゴシック体,YuGothic,メイリオ,Meiryo,sans-serif;
-  }
-
-
-
-
-
-  .popularCategory{
-    overflow-x: auto;
-    text-align: center;
-    white-space: nowrap;
-  
-    // vertical-align: baseline;
-    margin: 0px;
-    padding: 0px;
-    border-width: 0px;
-    border-style: initial;
-    border-color: initial;
-    border-image: initial;
-    font: inherit;
-    box-sizing: border-box;
-    display: block;
-    // margin: 0;
-
-
-    .lists{
-      display: block;
+    .category{
+      margin-bottom: 16px;
       text-align: center;
-      width: 100%;
-      // margin: -10px 0px 0px -10px;
-      // list-style: none;
-      // display: flex;
-      // list-style: none;
+      font-size: 28px;
+      font-weight: 600;
+      line-height: 1.4em;
+      font-family: Arial,游ゴシック体,YuGothic,メイリオ,Meiryo,sans-serif;
+    }
+
+
+
+
+
+    .popularCategory{
+      overflow-x: auto;
+      text-align: center;
+      white-space: nowrap;
     
       // vertical-align: baseline;
-      // padding: 0px;
+      margin: 0px;
+      padding: 0px;
       border-width: 0px;
       border-style: initial;
       border-color: initial;
       border-image: initial;
       font: inherit;
-    
       box-sizing: border-box;
-    
-      // margin-block-start: 1em;
-      // margin-block-end: 1em;
-      margin-inline-start: 0px;
-      margin-inline-end: 0px;
-      // padding-inline-start: 40px;
-    
-      white-space: nowrap;
-    }
-    .list{
-      margin: 10px 0px 0px 10px;
-      display: inline-block;
-      
+      display: block;
+      // margin: 0;
 
-    }
-    a{
-      background-color: rgb(239, 239, 239);
-      cursor: pointer;
-      display: inline-block;
-      font-size: 14px;
-      font-weight: 600;
-      border-radius: 15px;
-      padding: 8px 16px;
+
+      .lists{
+        display: block;
+        text-align: center;
+        width: 100%;
+        // margin: -10px 0px 0px -10px;
+        // list-style: none;
+        // display: flex;
+        // list-style: none;
+      
+        // vertical-align: baseline;
+        // padding: 0px;
+        border-width: 0px;
+        border-style: initial;
+        border-color: initial;
+        border-image: initial;
+        font: inherit;
+      
+        box-sizing: border-box;
+      
+        // margin-block-start: 1em;
+        // margin-block-end: 1em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        // padding-inline-start: 40px;
+      
+        white-space: nowrap;
+      }
+      .list{
+        margin: 10px 0px 0px 10px;
+        display: inline-block;
+        
+
+      }
+      a{
+        background-color: rgb(239, 239, 239);
+        cursor: pointer;
+        display: inline-block;
+        font-size: 14px;
+        font-weight: 600;
+        border-radius: 15px;
+        padding: 8px 16px;
+      }
     }
   }
-
 
 
   .new{
-    // padding: 42px 0px 100px;
+    width: 100%;
+    margin: 0px auto;
+    width: 1020px;
+    padding: 42px 0px 100px;
+    display: flex;
+    
 
-    // vertical-align: baseline;
-    // margin: 0px;
-    // border-width: 0px;
-    // border-style: initial;
-    // border-color: initial;
-    // border-image: initial;
-    // font: inherit;
-    height:900px;
-    width:900px;
-    margin: 0 auto;
-    background-color: #fffacd;
+    box-sizing: border-box;
 
-    &__item{
-      padding: 40px;
-      color:#ffa500;
-      font-size:30px;
-      text-align: center;
+    display: block;
+
+
+    .item{
+      
+      vertical-align: baseline;
+
+      &__top{
+        margin-bottom: 16px;
+
+        &__ladies{
+          font-size: 24px;
+          font-weight: 600;
+          flex-grow: 1;
+          flex-shrink: 1;
+          flex-basis: 0%;
+        }
+        &__mottomiru{
+        font-size: 14px;
+        padding: 5px 16px 5px 5px;
+
+        color: rgb(0, 149, 238);
+        display: block;
+        font-size: 12px;
+        font-weight: 600;
+        position: relative;
+        padding: 5px 14px 5px 5px;
+        text-align: right;
+        }
+      }
+
+      .box{
+
+        &__contents{
+          grid-template-columns: repeat(5, 1fr);
+          gap: 20px 20px;
+          display: grid;
+          margin: 10px 0px 0px 0px;
+          
+          &__content{
+            width: 188px;
+            height: 252px;
+            
+            visibility: visible;
+            transition: all 0.5s ease 0s;
+            opacity: 1;
+            vertical-align: baseline;
+            margin: 0px;
+            padding: 0px;
+            border-width: 0px;
+            border-style: initial;
+            border-color: initial;
+            border-image: initial;
+            font: inherit;
+
+            .contentlink{
+              // cursor: pointer;
+              // display: inline-block;
+              // position: relative;
+              // text-decoration: none;
+              // vertical-align: top;
+              // color: inherit;
+              height: 100%;
+              width: 100%;
+              cursor: pointer;
+              display: inline-block;
+              position: relative;
+              text-decoration: none;
+              vertical-align: top;
+              color: inherit;
+
+              
+              
+              .tag{
+                height: 0;
+                overflow: hidden;
+                padding: 0 0 100%;
+                position: relative;
+                width: 100%;
+                &__image{
+                  width: 188px;
+                  height: 188px;
+                  background-image: url(test_content);
+                }
+
+              }
+              
+            }
+            
+          }
+        }
+      }
     }
+  }
+  .sumaho{
+    height: 260px;
+    width: 100%;
+    background-color: #253141;
+  }
+
+  .figure{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    -webkit-box-align: center;
+
+    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,.18);
+    box-shadow: 0 2px 4px rgba(0,0,0,.18);
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    margin: 0;
+    overflow: hidden;
+    z-index: 1;
   }
 
 
+  figcaption{
+  box-sizing: border-box;
+  background-color: white;
+  font-size: 14px;
+  height: 64px;
+  line-height: 1.4em;
+  padding: 0 12px;
+  white-space: normal;
+  word-break: break-word;
+  display: flex;
+  }
 
-
-
-
-
-
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-// ul {
-  // display: block;
-  // list-style-type: disc;
-  // margin-block-start: 1em;
-  // margin-block-end: 1em;
-  // margin-inline-start: 0px;
-  // margin-inline-end: 0px;
-  // padding-inline-start: 40px;
-  
-  // display: flex;
-  // list-style: none;
-  // text-align: center;
-
-  // display: block;
-  // text-align: center;
-  // width: 100%;
-  // margin-top: -10px;
-  // margin-right: 0px;
-  // margin-bottom: 0px;
-  // margin-left: -10px;
-  // min-width: 768px
-// }
-
-
-
-
-
-// html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6,
-// p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn,
-// em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var,
-// b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend,
-// table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas,
-// details, embed, figure, figcaption, footer, header, hgroup, main, menu,
-// nav, output, ruby, section, summary, time, mark, audio, video {
-//   vertical-align: baseline;
-//   margin: 0px;
-//   padding: 0px;
-//   border-width: 0px;
-//   border-style: initial;
-//   border-color: initial;
-//   border-image: initial;
-//   font: inherit;
-// }
-
-// *, ::before, ::after {
-//   box-sizing: border-box;
-// }
-
-// div {
-//   display: block;
-// }
-
-
-
+  span{
+  display: inline-block;
+  height: 2.8em;
+  overflow: hidden;
+  position: relative;
+  display: flex;
+  }
+  span[aria-label=Price]{
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    background: rgba(0,0,0,.4);
+    border-radius: 0 14px 14px 0;
+    bottom: 8px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    color: #fff;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    font-size: 17px;
+    height: 32px;
+    height: 28px;
+    letter-spacing: .02em;
+    margin: 0;
+    padding: 0 12px;
+    position: absolute;
+    z-index: 2;
+  }
 }
