--- a/app/views/shared/_contents2.html.haml
+++ b/app/views/shared/_contents2.html.haml
@@ -2,7 +2,7 @@
   .item
     .top
       %h3.item__top__ladies
-        レディース新着アイテム
+        シャネル
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
@@ -13,7 +13,7 @@
   .item
     .top
       %h3.item__top__ladies
-        メンズ新着アイテム
+        ルイヴィトン
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
@@ -24,7 +24,7 @@
   .item
     .top
       %h3.item__top__ladies
-        家電・スマホ・カメラ新着アイテム
+        シュプリーム
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
@@ -35,7 +35,7 @@
   .item
     .top
       %h3.item__top__ladies
-        おもちゃ・ホビー・グッズ新着アイテム
+        ナイキ
       %a.item__top__mottomiru もっと見る
     .box
       .box__contents
