--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -5,9 +5,6 @@
   flex-direction: column;
   min-height: 100vh;
 
-
-
-
   .top-image{
     left: 50%;
     margin-left: -50vw;
@@ -25,12 +22,7 @@
       background-position: center center;
       background-size: auto;
     }
-
   }
-
-
-
-
   .popular{
     padding: 56px 0px 30px;
     background-color: rgb(255, 255, 255);
@@ -39,7 +31,6 @@
     position: relative;
     top: 0px;
     width: 100vw;
-
 
     .category{
       margin-bottom: 16px;
@@ -50,16 +41,10 @@
       font-family: Arial,游ゴシック体,YuGothic,メイリオ,Meiryo,sans-serif;
     }
 
-
-
-
-
     .popularCategory{
       overflow-x: auto;
       text-align: center;
       white-space: nowrap;
-    
-      // vertical-align: baseline;
       margin: 0px;
       padding: 0px;
       border-width: 0px;
@@ -69,42 +54,27 @@
       font: inherit;
       box-sizing: border-box;
       display: block;
-      // margin: 0;
-
 
       .lists{
         display: block;
         text-align: center;
         width: 100%;
-        // margin: -10px 0px 0px -10px;
-        // list-style: none;
-        // display: flex;
-        // list-style: none;
-      
-        // vertical-align: baseline;
-        // padding: 0px;
         border-width: 0px;
         border-style: initial;
         border-color: initial;
         border-image: initial;
         font: inherit;
-      
         box-sizing: border-box;
-      
-        // margin-block-start: 1em;
-        // margin-block-end: 1em;
         margin-inline-start: 0px;
         margin-inline-end: 0px;
-        // padding-inline-start: 40px;
-      
         white-space: nowrap;
       }
+
       .list{
         margin: 10px 0px 0px 10px;
         display: inline-block;
-        
-
       }
+
       a{
         background-color: rgb(239, 239, 239);
         cursor: pointer;
@@ -117,22 +87,16 @@
     }
   }
 
-
   .new{
     width: 100%;
     margin: 0px auto;
     width: 1020px;
     padding: 42px 0px 40px;
     display: flex;
-    
-
     box-sizing: border-box;
-
     display: block;
 
-
     .item{
-      
       vertical-align: baseline;
 
       &__top{
@@ -145,10 +109,10 @@
           flex-shrink: 1;
           flex-basis: 0%;
         }
+
         &__mottomiru{
         font-size: 14px;
         padding: 5px 16px 5px 5px;
-
         color: rgb(0, 149, 238);
         display: block;
         font-size: 12px;
@@ -158,7 +122,6 @@
         text-align: right;
         }
       }
-
       .box{
 
         &__contents{
@@ -184,12 +147,6 @@
             font: inherit;
 
             .contentlink{
-              // cursor: pointer;
-              // display: inline-block;
-              // position: relative;
-              // text-decoration: none;
-              // vertical-align: top;
-              // color: inherit;
               height: 100%;
               width: 100%;
               cursor: pointer;
@@ -198,8 +155,6 @@
               text-decoration: none;
               vertical-align: top;
               color: inherit;
-
-              
               
               .tag{
                 height: 0;
@@ -212,20 +167,18 @@
                   height: 188px;
                   background-image: url(test_content);
                 }
-
               }
-              
             }
-            
           }
         }
       }
     }
   }
   .sumaho{
-    height: 260px;
-    width: 100%;
-    background-color: #253141;
+    img.bottom__image1 {
+      width: 1550px;
+      height: 300px;
+      }
   }
 
   .figure{
@@ -244,7 +197,6 @@
     overflow: hidden;
     z-index: 1;
   }
-
 
   figcaption{
   box-sizing: border-box;
@@ -265,6 +217,7 @@
   position: relative;
   display: flex;
   }
+
   span[aria-label=Price]{
     -webkit-box-align: center;
     -ms-flex-align: center;
