--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,6 +1,5 @@
 .main
   .top-image
-    -# = link_to image_tag( 'top_image.jpg'), 'http://www.google.com'
     .top-image2
   .popular
     %h2.category
@@ -15,50 +14,22 @@
           %a.tag3 家電・スマホ・カメラ
         %li.list
           %a.tag4 おもちゃ・ホビー・グッズ
-
-
-  = render partial: 'shared/contents'
   = render partial: 'shared/contents'
 
-
-  -# .new
-  -#   .item
-  -#     .top
-  -#       %h3.item__top__ladies
-  -#         メンズ新着アイテム
-  -#       %a.item__top__mottomiru もっと見る
-  -#     .box
-  -#       .box__contents
-  -#         .box__contents__content
-  -#     .box
-  -#       .box__contents
-  -#         .box__contents__content
-
-          
-  -# .new
-  -#   .item
-  -#     .top
-  -#       %h3.item__top__ladies
-  -#         家電・スマホ・カメラ新着アイテム
-  -#       %a.item__top__mottomiru もっと見る
-  -#     .box
-  -#       .box__contents
-  -#         .box__contents__content
-  -#     .box
-  -#       .box__contents
-  -#         .box__contents__content
-
-  -# .new
-  -#   .item
-  -#     .top
-  -#       %h3.item__top__ladies
-  -#         おもちゃ・ホビー・グッズ新着アイテム
-  -#       %a.item__top__mottomiru もっと見る
-  -#     .box
-  -#       .box__contents
-  -#         .box__contents__content
-  -#     .box
-  -#       .box__contents
-  -#         .box__contents__content
+  .popular
+    %h2.category
+      人気のブランド
+    .popularCategory
+      %ul.lists
+        %li.list
+          %a.tag1 シャネル
+        %li.list
+          %a.tag2 ルイヴィトン
+        %li.list
+          %a.tag3 シュプリーム
+        %li.list
+          %a.tag4 ナイキ
+  = render partial: 'shared/contents2'
 
   %aside.sumaho
+    %img.bottom__image1{:alt => "", :src => "top_aside.png"}/
