--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,6 +1,6 @@
 .main
   .top-image
-    .top-image2
+    %img.top-image2{:alt => "", :src => "top_image.jpg"}/
   .popular
     %h2.category
       人気のカテゴリー
