--- a/app/views/shared/_content.html.haml
+++ b/app/views/shared/_content.html.haml
@@ -6,7 +6,7 @@
           111
       .tag
         %span{"aria-label" => "Price"} ¥5,555
-        .tag__image
+        %img.tag__image{:alt => "", :src => "test_content.jpg"}/
 .box__contents__content
   %a.contentlink
     %figure.figure
@@ -15,7 +15,7 @@
           111
       .tag
         %span{"aria-label" => "Price"} ¥5,555
-        .tag__image
+        %img.tag__image{:alt => "", :src => "test_content.jpg"}/
 .box__contents__content
   %a.contentlink
     %figure.figure
@@ -24,7 +24,7 @@
           111
       .tag
         %span{"aria-label" => "Price"} ¥5,555
-        .tag__image
+        %img.tag__image{:alt => "", :src => "test_content.jpg"}/
 .box__contents__content
   %a.contentlink
     %figure.figure
@@ -33,7 +33,7 @@
           111
       .tag
         %span{"aria-label" => "Price"} ¥5,555
-        .tag__image
+        %img.tag__image{:alt => "", :src => "test_content.jpg"}/
 .box__contents__content
   %a.contentlink
     %figure.figure
@@ -42,4 +42,4 @@
           111
       .tag
         %span{"aria-label" => "Price"} ¥5,555
-        .tag__image
+        %img.tag__image{:alt => "", :src => "test_content.jpg"}/
