--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -18,7 +18,7 @@
       width: 100vw;
       overflow: hidden;
       height: 390px;
-      background-image: url(top_image.jpg);
+      // background-image: url(top_image.jpg);
       background-position: center center;
       background-size: auto;
     }
