main下部の謎の空白修正

--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -175,9 +175,17 @@
     }
   }
   .sumaho{
+    width: 1544px;
+    height: 300px;
+    padding: 56px 0px 0px;
     img.bottom__image1 {
-      width: 1550px;
+      
+      position: absolute; top:6356px;
+      width: 1544px;
       height: 300px;
+      margin: 50px,0px;
+      padding: 0px;
+      
       }
   }
 
