--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -179,9 +179,9 @@
     height: 300px;
     padding: 51px 0px 0px;
     img.bottom__image1 {
-      
+      max-width: 100%;
       position: absolute; top:6356px;
-      width: 1544px;
+      // width: 1544px;
       height: 300px;
       margin: 50px,0px;
       padding: 0px;
