right_space_correction_conplate

--- a/app/assets/stylesheets/modules/_items.scss
+++ b/app/assets/stylesheets/modules/_items.scss
@@ -175,7 +175,8 @@
     }
   }
   .sumaho{
-    width: 1544px;
+    max-width: 100%;
+    // width: 1544px;
     height: 300px;
     padding: 51px 0px 0px;
     img.bottom__image1 {
