--- a/app/views/shared/_mypage-user-transaction-info.html.haml
+++ b/app/views/shared/_mypage-user-transaction-info.html.haml
@@ -3,11 +3,11 @@
   %ul.mypage__user__transaction__tabs
     %li.mypage__user__transaction__now
       %h3
-        %a{href: "#"}
+        = link_to "#" do
           取引中
     %li
       %h3
-        %a{href: "#"}
+        = link_to "#" do
           過去の取引
   .mypage__user__tab__content
     %ul.mypage__user__tab__content__infos.active
