--- a/app/assets/stylesheets/modules/_users.scss
+++ b/app/assets/stylesheets/modules/_users.scss
@@ -305,4 +305,15 @@ body {
         }
     }
 }
-
+.sumaho1{
+    max-width: 100%;
+    height: 300px;
+    padding: 51px 0px 0px;
+    img.bottom__image2 {
+      max-width: 100%;
+      height: 300px;
+      margin: 50px,0px;
+      padding: 0px;
+      
+    }
+}
