--- a/app/views/shared/_mypage-side-manu.html.haml
+++ b/app/views/shared/_mypage-side-manu.html.haml
@@ -2,121 +2,94 @@
   %nav.mypage__side__navs
     %ul.mypage__side__nav
       %li
-        %a.mypage__side__nav__list.active{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list active" do
           マイページ
-          -# %i.icon-arrow-right
-          = fa_icon 'chevron-right', class: 'side__arrow__right, active'
+          = fa_icon 'chevron-right', class: 'side__arrow__right active'      
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           お知らせ
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
-          やることリスト
-          -# %i.icon-arrow-right
-          = fa_icon 'chevron-right', class: 'side__arrow__right'
-      %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           いいね！一覧
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           出品する
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           出品した商品 - 出品中
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           出品した商品 - 取引中
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           出品した商品 - 売却済み
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           購入した商品 - 取引中
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           購入した商品 - 過去の取引
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           ニュース一覧
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           評価一覧
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           ガイド
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           お問い合わせ
-          -# %i.icon-arrow-right
+          = fa_icon 'chevron-right', class: 'side__arrow__right'
+      %li
+        = link_to "#", class: "mypage__side__nav__list" do
+          いいね！一覧
           = fa_icon 'chevron-right', class: 'side__arrow__right'
     %h3.mypage__side__nav__head メルペイ
     %ul.mypage__side__nav
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           売上・振込申請
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           ポイント
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
     %h3.mypage__side__nav__head 設定
     %ul.mypage__side__nav
       %li
-        %a.mypage__side__nav__list{href: "#"}
-          プロフィール
-          -# %i.icon-arrow-right
-          = fa_icon 'chevron-right', class: 'side__arrow__right'
-      %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           発送元・お届け先住所変更
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           支払い方法
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           メール/パスワード
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           本人情報
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           電話番号の確認
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
       %li
-        %a.mypage__side__nav__list{href: "#"}
+        = link_to "#", class: "mypage__side__nav__list" do
           ログアウト
-          -# %i.icon-arrow-right
           = fa_icon 'chevron-right', class: 'side__arrow__right'
