--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,3 +4,5 @@
     = render 'shared/mypage-user-info-todo'
     = render 'shared/mypage-user-transaction-info'
   = render 'shared/mypage-side-manu'
+.sumaho1
+  %img{alt: "", src: "/top_aside.png", class: "bottom__image2"}
