cleate_mypage2_correction2(image_tag)

--- a/app/views/shared/_mypage-user-info-todo.html.haml
+++ b/app/views/shared/_mypage-user-info-todo.html.haml
@@ -15,7 +15,7 @@
       %li
         = link_to "#", class: "mypage__user__infos" do
           %figure
-            %img{alt: "", "src": "https://static.mercdn.net/images/mercari_profile.png"}/
+            = image_tag 'https://static.mercdn.net/images/mercari_profile.png', alt: "smallmerukariLogo"
           .mypage__user__info
             .mypage__user__info__text 事務局から個別メッセージ「ログイン通知」
             %time
@@ -27,7 +27,7 @@
       %li
         = link_to "#", class: "mypage__user__infos" do
           %figure
-            %img{alt: "", "src": "https://static.mercdn.net/images/mercari_profile.png"}/
+            = image_tag 'https://static.mercdn.net/images/mercari_profile.png', alt: "smallmerukariLogo"
           .mypage__user__info
             .mypage__user__info__text 事務局から個別メッセージ「ログイン通知」
             %time
@@ -39,7 +39,7 @@
       %li
         = link_to "#", class: "mypage__user__infos" do
           %figure
-            %img{alt: "", "src": "https://static.mercdn.net/images/mercari_profile.png"}/
+            = image_tag 'https://static.mercdn.net/images/mercari_profile.png', alt: "smallmerukariLogo"
           .mypage__user__info
             .mypage__user__info__text 【実は高く売れる！】遊び終わったゲームもバーコードで10秒出品♪
             %time
@@ -52,7 +52,7 @@
       %li
         = link_to "#", class: "mypage__user__infos" do
           %figure
-            %img{alt: "", "src": "https://static.mercdn.net/images/mercari_profile.png"}/
+            = image_tag 'https://static.mercdn.net/images/mercari_profile.png', alt: "smallmerukariLogo"
           .mypage__user__info
             .mypage__user__info__text 事務局から個別メッセージ「ログイン通知」
             %time
