cleate_mypage2_correction3

--- a/app/views/shared/_mypage-user-info-todo.html.haml
+++ b/app/views/shared/_mypage-user-info-todo.html.haml
@@ -1,6 +1,6 @@
-%section.mypage__user__info__todo__contents
-  %ul.mypage__user__info__todo__tabs
-    %li.mypage__user__info__tabs
+%section.mypage__contents
+  %ul.mypage__contents__tabs
+    %li.mypage__contents__tabs__info
       %h3
         = link_to "#" do              
           お知らせ
