--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,5 @@
 %main.main__contents
-  .contents
+  .main__contents__contents
     = render 'shared/mypage-user-image'
     = render 'shared/mypage-user-info-todo'
     = render 'shared/mypage-user-transaction-info'
