cleate_mypage2_correction4

--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -5,4 +5,4 @@
     = render 'shared/mypage-user-transaction-info'
   = render 'shared/mypage-side-manu'
 .sumaho1
-  %img{alt: "", src: "/top_aside.png", class: "bottom__image2"}
+  = image_tag '/top_aside.png', class: "bottom__image2"
