cleate_mypage2微修正1

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,5 @@
 @import "modules/devise";
 @import "modules/cards";
 @import "modules/sell-btn";
-@import "modules/devise"；
+@import "modules/devise";
+@import "modules/main_footer_image";
