--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,5 +4,4 @@
     = render 'shared/mypage-user-info-todo'
     = render 'shared/mypage-user-transaction-info'
   = render 'shared/mypage-side-manu'
-.sumaho1
-  = image_tag '/top_aside.png', class: "bottom__image2"
+= render 'shared/main_footer_image'
