File-creation-and-action-definition

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,4 +18,5 @@
 @import "modules/mypage_user_image";
 @import "modules/mypage_user_todo";
 @import "modules/mypage_user_transactions";
-@import "modules/mypage_side_menu"
+@import "modules/mypage_side_menu";
+@import "modules/information";
