create_purchase_confirmation_view_conplete

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,8 @@
 @import "modules/devise";
 @import "modules/main_footer_image";
 @import "modules/profile";
+@import "modules/purchase.confirmation";
+@import "modules/mypage_user_image";
+@import "modules/mypage_user_todo";
+@import "modules/mypage_user_transactions";
+@import "modules/mypage_side_menu"
