--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,5 +3,5 @@
     = render 'shared/mypage-user-image'
     = render 'shared/mypage-user-info-todo'
     = render 'shared/mypage-user-transaction-info'
-  = render 'shared/mypage-side-manu'
+  = render 'shared/mypage-side-menu'
 = render 'shared/main_footer_image'
