--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,7 +10,11 @@
 @import "modules/cards";
 @import "modules/sell-btn";
 @import "modules/devise";
-@import "modules/items-new"
+@import "modules/items-new";
 @import "modules/main_footer_image";
 @import "modules/profile";
 @import "modules/logout";
+@import "modules/mypage_user_image";
+@import "modules/mypage_user_todo";
+@import "modules/mypage_user_transactions";
+@import "modules/mypage_side_menu"
