--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -111,6 +111,9 @@
         font-size: 16px;
         font-weight: bold;
       }
+      select {
+        -webkit-appearance: none;
+      }
     }
     .field label {
       font-weight: 600;
@@ -126,6 +129,17 @@
       line-height: 1.5;
       font-size: 16px;
     }
+    .field select {
+      width: 100%;
+      margin: 8px 0 0;
+      height: 40px;
+      padding: 10px 16px 8px;
+      border-radius: 4px;
+      border: 1px solid #ccc;
+      background: #fff;
+      line-height: 1.5;
+      font-size: 16px;
+    }
     .field .l-single-text {
       margin: 8px 0 0;
       padding: 0;
@@ -133,6 +147,15 @@
     }
     .form-require {
       background: #ea352d;
+      margin: 0 0 0 8px;
+      padding: 2px 4px;
+      border-radius: 2px;
+      color: #fff;
+      font-size: 12px;
+      vertical-align: top;
+    }
+    .form-any {
+      background:#ccc;
       margin: 0 0 0 8px;
       padding: 2px 4px;
       border-radius: 2px;
