--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,5 @@
 $white: #fff;
-$light-grey: #EEE;
+$light-grey: #f5f5f5;
 $light-blue:rgb(0,149,238);
 $main-red: #ea352b;
 $facebook-color: #385185;
