--- a/app/assets/stylesheets/modules/_devise.scss
+++ b/app/assets/stylesheets/modules/_devise.scss
@@ -95,6 +95,10 @@
       margin: 8px 0 0;
       line-height: 1.5;
     } 
+    .btn-mail {
+      color: #fff;
+      background-color: #ea352d;
+    }
   }
   .l-single-head {
     font-size: 22px;
