商品詳細ページ実装

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,4 +10,6 @@
 @import "modules/devise";
 @import "modules/cards";
 @import "modules/sell-btn";
-@import "modules/devise"；
+@import "modules/devise";
+@import "modules/items-show";
+
