--- a/app/assets/stylesheets/modules/_information.scss
+++ b/app/assets/stylesheets/modules/_information.scss
@@ -4,6 +4,7 @@
   @include clearfix;
   &__content {
     float: right;
+    width:700px;
     .chapter-container {
       background-color: $white;
       &__head {
@@ -12,7 +13,7 @@
         border-bottom: 1px solid #f5f5f5;
         text-align: center;
       }
-      form.l-single-inner {
+      .l-single-inner {
         padding: 64px;
         border-top: 1px solid #f5f5f5;
         font-size: 14px;
@@ -72,9 +73,6 @@
             }
           }
         }
-        button {
-          margin: 40px 0 0 0;
-        }
         .btn-default {
           display: block;
           width: 100%;
@@ -85,6 +83,7 @@
           text-align: center;
         }
         .btn-red {
+          margin: 40px 0 0 0;
           background: #ea352d;
           border: 1px solid $main-red;
           color: #fff;
