--- a/app/views/users/information.html.haml
+++ b/app/views/users/information.html.haml
@@ -3,7 +3,8 @@
     .main-contents__content
       %section.chapter-container
         %h2.chapter-container__head 本人情報の登録
-        = form_for [@user,@address]  do |f|
+        -# フォームの値は仮なので修正が必要です
+        = form_for [@user, @address], html: {class: 'l-single-inner'} do |f|
           %div
             %p
               お客さまの本人情報をご登録ください。
@@ -14,93 +15,47 @@
                 本人確認書類のアップロードについて
                 = fa_icon 'arrow-right',class:'icon'
           .form-group
-            %label お名前
+            = f.label :お名前
             %p  てすとなまえ
           .form-group
-            %label お名前カナ
+            = f.label :お名前カナ
             %p 
               テストナマエ
-              
           .form-group
-            %label{for: "birthday"} 生年月日
+            = f.label :生年月日
             %p 1900/01/01
           .form-group
-            %label{for: "zip_code"} 郵便番号
+            = f.label :郵便番号
             %span.form-arbitrary 任意
-            %input.input-default{name: "zip_code", placeholder: "例）1234567", type: "text", value: ""}
+            %br/
+            = f.text_field :postcode, class: 'input-default', placeholder: "例 ）1234567"
           .form-group
-            %label{for: "prefecture"} 都道府県
+            = f.label :都道府県
             %span.form-arbitrary 任意
             .form-group__select-wrap
-              =fa_icon 'chevron-down',class:'form-group__select-wrap__icon'
-              %select.select-default{name: "prefecture"}
-                %option --
-                %option 北海道
-                %option 青森県
-                %option 岩手県
-                %option 宮城県
-                %option 秋田県
-                %option 山形県
-                %option 福島県
-                %option{selected: "selected"} 東京都
-                %option 神奈川県
-                %option 埼玉県
-                %option 千葉県
-                %option 茨城県
-                %option 栃木県
-                %option 群馬県
-                %option 山梨県
-                %option 新潟県
-                %option 長野県
-                %option 富山県
-                %option 石川県
-                %option 福井県
-                %option 愛知県
-                %option 岐阜県
-                %option 静岡県
-                %option 三重県
-                %option 大阪府
-                %option 兵庫県
-                %option 京都府
-                %option 滋賀県
-                %option 奈良県
-                %option 和歌山県
-                %option 鳥取県
-                %option 島根県
-                %option 岡山県
-                %option 広島県
-                %option 山口県
-                %option 徳島県
-                %option 香川県
-                %option 愛媛県
-                %option 高知県
-                %option 福岡県
-                %option 佐賀県
-                %option 長崎県
-                %option 熊本県
-                %option 大分県
-                %option 宮崎県
-                %option 鹿児島県
-                %option 沖縄県
+              = fa_icon 'chevron-down', class:'form-group__select-wrap__icon'
+              = f.select :prefecture, [ ['-----','-----'], ['東京','東京'], ['福岡','福岡'] ],{},{class: 'select-default'}
           .form-group
-            %label{for: "city"} 市区町村
+            = f.label :市区町村
             %span.form-arbitrary 任意
-            %input.input-default{name: "city", placeholder: "例) 横浜市緑区", type: "text", value: ""}
+            %br/
+            = f.text_field :city, class: 'input-default', placeholder: "例 ）横浜市緑区"
           .form-group
-            %label{for: "address1_label"} 番地
+            = f.label :番地
             %span.form-arbitrary 任意
-            %input.input-default{name: "address1", placeholder: "例) 青山1−1−1", type: "text",value: ""}
+            %br/
+            = f.text_field :block, class: 'input-default', placeholder: "例 ）青山1-1-1"
           .form-group
-            %label{for: "address2_label"} 建物名
+            = f.label :建物名
             %span.form-arbitrary 任意
-            %input.input-default{name: "address2", placeholder: "例) 柳ビル103", type: "text", value: ""}
-          %button.btn-default.btn-red{type: "submit"} 登録する
+            %br/
+            = f.text_field :block, class: 'input-default', placeholder: "例 ）柳ビル103" 
+          = f.submit '登録する',class:'btn-default btn-red'
           .form-group.text-right
             %p
               = link_to '/jp/help_center/article/423/',target: '_blank' do
                 本人情報の登録について
                 = fa_icon 'arrow-right',class:'icon'
-          %input{name: "__csrf_value", type: "hidden", value: "fa965d5e5f214dd579ee525d3a77c0c7223456b14e67ae19103302c53a20f26967c358328874b5c3d5c22475bba7ab694d6e1814f22c130a2b00a6e779d7a82bf"}
     = render "/shared/mypage-side-manu"
 
 
