--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,4 @@
 @import "modules/mypage_user_transactions";
 @import "modules/mypage_side_menu";
 @import "modules/information";
+@import "modules/breadcrumbs";
