cleate_mypage_user_exhibit_list

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,6 +9,7 @@
 @import "modules/users";
 @import "modules/cards";
 @import "modules/sell-btn";
+@import "modules/mypage_user_transactions";
 @import "modules/devise";
 @import "modules/items-show";
 @import "modules/items-new";
@@ -17,5 +18,5 @@
 @import "modules/logout";
 @import "modules/mypage_user_image";
 @import "modules/mypage_user_todo";
-@import "modules/mypage_user_transactions";
-@import "modules/mypage_side_menu"
+@import "modules/mypage_side_menu";
+@import "modules/exhibit_now";
