--- a/app/views/users/buy.html.haml
+++ b/app/views/users/buy.html.haml
@@ -5,7 +5,7 @@
     %section.content__confirmations
       .content__confirmations__confirmation
         %h3.content__confirmations__confirmation__item__image
-          = image_tag '/sumahoring_sample.png'
+          = image_tag '/mercari_icon_gray.png'
         %p.content__confirmations__confirmation__item__explanation
           メタリック・スマホホールドリング　ゴールド
         = form_with model: @parchase, class: "content__confirmations__confirmation__item__form" do |form| 
